# Face-Recognition-Live-System-MQTT-Integration-GUI

./: .gitignore  CMakeLists.txt  DEVELOPER.md  README.md  pyproject.toml
examples/: predict_from_path.py
src/: main.c
src/face_id/: __init__.py  api.py  app.py  cli.py  command_executor.py  enroll.py  gallery.py  live.py  matching.py  mqtt_client.py  quality.py
